force-app/main/default/objects/Lead/fields/Days_Since_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Contact__c</fullName>
    <description>Number of days since the lead was last contacted</description>
    <label>Days Since Last Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>