force-app/main/default/objects/Lead/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the lead is overdue for follow-up (7+ days since last contact)</description>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>